--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo "Let's begin!"
+      - run: |
+          echo "Let's begin!"
+          echo "Second line"
+          id
 
       - name: Define first post action
         uses: ./
@@ -20,4 +23,8 @@ jobs:
       - name: Define second post action
         uses: ./
         with:
-          run: echo "The second post action"
+          run: |
+            echo "The second post's action"
+            ls -la;
+            id
+          shell: sh
