--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@actions/core": "^1.2.3",
     "@actions/exec": "^1.0.3",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "@actions/io": "^1.1.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
